[package]
name = "BeansKV"
version = "0.1.0"
authors = ["jackwener <894362844@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.0.0"
serde = { version = "1.0.97", features = ["derive"] } # required for T constraints
snafu = "0.4.4"
log = "0.4.8"
natord = "1.0.9"
lru = "0.1.17"
bincode = "1.1.4"
string-error = "0.1.0"
memmap = "0.7"
